--- a/index.html
+++ b/index.html
@@ -13,6 +13,19 @@
 </head>
 <body data-url="https://jankenupserver.s3.us-west-2.amazonaws.com/assets/images/texture2.png" data-lazy="true" data-lazy_type="background">
     
+    <div class="card">
+        <div class="background"></div>
+        <div class="content">
+            <div class="header">
+                <div class="name text" data-text="Paltita">Paltita</div>
+                <div class="team text" data-text="Team Rock">Team Rock</div>
+            </div>
+            <div class="body"></div>
+        </div>
+        <div class="footer"></div>
+        <div class="border"></div>
+    </div>
+
     <script src="/assets/js/localization.js"></script>
     <script src="/assets/js/lazyLoad.js"></script>
     <script src="/assets/js/main.js"></script>
