--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
                 <div class="name text" data-text="Paltita">Paltita</div>
                 <div class="team text" data-text="Team Rock">Team Rock</div>
             </div>
-            <div class="body"></div>
+            <div class="body">
+                <img class="character" data-url="/assets/images/characters/ryusei.png" data-lazy="true" data-lazy_type="img"/>
+            </div>
         </div>
         <div class="footer"></div>
         <div class="border"></div>
