--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="theme-color" content="#3cb3bd"/>
     <meta name="description" content="JanKenUp! TCG"/>
 	<title>JanKenUp! Card</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon.png">
-    <link href="/assets/css/main.css" type="text/css" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="/jankencard/assets/images/favicon.png">
+    <link href="/jankencard/assets/css/main.css" type="text/css" rel="stylesheet">
 </head>
 <body data-url="https://jankenupserver.s3.us-west-2.amazonaws.com/assets/images/texture2.png" data-lazy="true" data-lazy_type="background">
     
@@ -28,8 +28,9 @@
         <div class="border"></div>
     </div>
 
-    <script src="/assets/js/localization.js"></script>
-    <script src="/assets/js/lazyLoad.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="/jankencard/assets/js/localization.js"></script>
+    <script src="/jankencard/assets/js/lazyLoad.js"></script>
+    <script src="/jankencard/assets/js/html2canvas.js"></script>
+    <script src="/jankencard/assets/js/main.js"></script>
 </body>
 </html>
