Cambio de personaje, color de card

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <div class="team text" data-text="Team Rock"></div>
                 </div>
                 <div class="body">
-                    <img class="character" data-url="/assets/images/characters/ryusei.png" data-lazy="true" data-lazy_type="img"/>
+                    <img class="character"/>
                 </div>
             </div>
             <div class="footer"></div>
@@ -34,6 +34,7 @@
     </div>
 
     <div class="actions">
+        <div class="button" data-action="change" data-localization-page="main" data-localization-key="change"></div>
         <div class="button" data-action="share" data-localization-page="main" data-localization-key="share"></div>
     </div>
 
