Generacion random de estadisticas

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="JanKenUp! TCG"/>
 	<title>JanKenUp! Card</title>
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon.png">
-    <link href="/assets/css/main.css" type="text/css" rel="stylesheet">
+    <link href="/assets/css/main.css?a=2" type="text/css" rel="stylesheet">
 </head>
 <body class="fade-in">
     
@@ -28,7 +28,10 @@
                     <img class="character"/>
                 </div>
             </div>
-            <div class="footer"></div>
+            <div class="footer">
+                <div class="ql-points" data-url="/assets/images/others/ql-support.png" data-lazy="true" data-lazy_type="background">5326</div>
+                <div class="ranking text" data-text="#595"></div>
+            </div>
             <div class="border"></div>
         </div>
     </div>
