--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
     
     <div class="container" data-url="/assets/images/others/texture.png" data-lazy="true" data-lazy_type="background">
         <div class="card">
-            <div class="background"></div>
+            <div class="background">
+                <div class="mask"></div>
+            </div>
             <div class="content">
                 <div class="header">
                     <div class="input name">
