Para despliegue en githubpages

--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="theme-color" content="#3cb3bd"/>
     <meta name="description" content="JanKenUp! TCG"/>
 	<title>JanKenUp! Card</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon.png">
-    <link href="/assets/css/main.css?a=2" type="text/css" rel="stylesheet">
+    <link rel="icon" type="image/png" sizes="32x32" href="/jankencard/assets/images/favicon.png">
+    <link href="/jankencard/assets/css/main.css?a=2" type="text/css" rel="stylesheet">
 </head>
 <body class="fade-in">
     
-    <div class="container" data-url="/assets/images/others/texture.png" data-lazy="true" data-lazy_type="background">
+    <div class="container" data-url="/jankencard/assets/images/others/texture.png" data-lazy="true" data-lazy_type="background">
         <div class="card">
             <div class="background">
                 <div class="mask"></div>
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="footer">
-                <div class="ql-points" data-url="/assets/images/others/ql-support.png" data-lazy="true" data-lazy_type="background">5326</div>
+                <div class="ql-points" data-url="/jankencard/assets/images/others/ql-support.png" data-lazy="true" data-lazy_type="background">5326</div>
                 <div class="ranking text" data-text="#595"></div>
             </div>
             <div class="border"></div>
@@ -43,9 +43,9 @@
         <div class="button" data-action="share" data-localization-page="main" data-localization-key="share"></div>
     </div>
 
-    <script src="/assets/js/localization.js"></script>
-    <script src="/assets/js/lazyLoad.js"></script>
-    <script src="/assets/js/html2canvas.js"></script>
-    <script src="/assets/js/main.js"></script>
+    <script src="/jankencard/assets/js/localization.js"></script>
+    <script src="/jankencard/assets/js/lazyLoad.js"></script>
+    <script src="/jankencard/assets/js/html2canvas.js"></script>
+    <script src="/jankencard/assets/js/main.js"></script>
 </body>
 </html>
