Despliegue de stadisticas de poderes

--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
                 </div>
                 <div class="body">
                     <img class="character"/>
+                    <div class="stats">
+                        <div data-stat="rock">
+                            <div class="icon" data-url="/assets/images/others/stats/rock.png" data-lazy="true" data-lazy_type="background"></div>
+                            <div class="value text" data-text="75"></div>
+                        </div>
+                        <div data-stat="paper">
+                            <div class="icon" data-url="/assets/images/others/stats/paper.png" data-lazy="true" data-lazy_type="background"></div>
+                            <div class="value text" data-text="15"></div>
+                        </div>
+                        <div data-stat="scissors">
+                            <div class="icon" data-url="/assets/images/others/stats/scissors.png" data-lazy="true" data-lazy_type="background"></div>
+                            <div class="value text" data-text="10"></div>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="footer">
