Ajustes para seleccionar el equipo segun ataques. Ademas, integracion del japones

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <input maxlength="10" spellcheck="false" data-localization-page="main" data-localization-key="name" data-localization-attribute="placeholder"/>
                         <span class="text"></span>
                     </div>
-                    <div class="team text" data-text="Team Rock"></div>
+                    <div class="team text"></div>
                 </div>
                 <div class="body">
                     <img class="character"/>
