Agregado icono para subir ataque

--- a/index.html
+++ b/index.html
@@ -32,14 +32,23 @@
                         <div data-stat="rock">
                             <div class="icon" data-url="/assets/images/others/stats/rock.png" data-lazy="true" data-lazy_type="background"></div>
                             <div class="value text" data-text="75"></div>
+                            <div class="changers">
+                                <div class="plus" data-url="/assets/images/others/plus.png" data-lazy="true" data-lazy_type="background"></div>
+                            </div>
                         </div>
                         <div data-stat="paper">
                             <div class="icon" data-url="/assets/images/others/stats/paper.png" data-lazy="true" data-lazy_type="background"></div>
                             <div class="value text" data-text="15"></div>
+                            <div class="changers">
+                                <div class="plus" data-url="/assets/images/others/plus.png" data-lazy="true" data-lazy_type="background"></div>
+                            </div>
                         </div>
                         <div data-stat="scissors">
                             <div class="icon" data-url="/assets/images/others/stats/scissors.png" data-lazy="true" data-lazy_type="background"></div>
                             <div class="value text" data-text="10"></div>
+                            <div class="changers">
+                                <div class="plus" data-url="/assets/images/others/plus.png" data-lazy="true" data-lazy_type="background"></div>
+                            </div>
                         </div>
                     </div>
                 </div>
