--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="theme-color" content="#3cb3bd"/>
-    <meta name="description" content="JanKenUp! TCG"/>
-	<title>JanKenUp! Card</title>
+    <meta name="description" data-localization-page="main" data-localization-key="pageDescription" data-localization-attribute="content"/>
+	<title data-localization-page="main" data-localization-key="pageTitle">JanKenUp! Card - Humita Games</title>
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon.png">
     <link href="/assets/css/main.css?a=2" type="text/css" rel="stylesheet">
 </head>
