--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
     <meta name="theme-color" content="#3cb3bd"/>
     <meta name="description" data-localization-page="main" data-localization-key="pageDescription" data-localization-attribute="content"/>
 	<title data-localization-page="main" data-localization-key="pageTitle">JanKenUp! Card - Humita Games</title>
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicon.png">
+    <link rel="icon" href="/assets/icons/favicon.ico">
+    <link rel="icon" href="/assets/icons/favicon_16x16.png" sizes="16x16" type="image/png">
+    <link rel="icon" href="/assets/icons/favicon_32x32.png" sizes="32x32" type="image/png">
+    <!-- home screen for iphones without the gloss effect -->
+    <link rel="apple-touch-icon-precomposed" href="/images/icon-iphone.png">
     <link href="/assets/css/main.css?a=2" type="text/css" rel="stylesheet">
 </head>
 <body class="fade-in">
