datos para facebook

--- a/index.html
+++ b/index.html
@@ -11,9 +11,15 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@humitagames">
     <meta name="twitter:title" content="JanKenUp! Card - Humita Games" data-localization-page="main" data-localization-key="pageTitle" data-localization-attribute="content">
-    <meta name="twitter:description" content="Create your own JanKen UP card!" data-localization-page="main" data-localization-key="pageDescription" data-localization-attribute="content">
+    <meta name="twitter:description" content="Create your own JanKenUP card!" data-localization-page="main" data-localization-key="pageDescription" data-localization-attribute="content">
     <meta name="twitter:creator" content="@humitagames">
-    <meta name="twitter:image:src" content="/assets/images/others/description.png">
+    <meta name="twitter:image:src" content="https://card.jankenup.com/assets/images/others/description.png">
+    <meta property="og:title" content="JanKenUp! Card - Humita Games" data-localization-page="main" data-localization-key="pageTitle" data-localization-attribute="content"/>
+    <meta property="og:type" content="article" />
+    <meta property="og:url" content="https://card.jankenup.com/" />
+    <meta property="og:image" content="https://card.jankenup.com/assets/images/others/description.png" />
+    <meta property="og:description" content="Create your own JanKenUP card!"  data-localization-page="main" data-localization-key="pageDescription" data-localization-attribute="content"/>
+    <meta property="og:site_name" content="HumitaGames" />
     <link rel="icon" href="/assets/icons/favicon.ico">
     <link rel="icon" href="/assets/icons/favicon_16x16.png" sizes="16x16" type="image/png">
     <link rel="icon" href="/assets/icons/favicon_32x32.png" sizes="32x32" type="image/png">
