--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
     <div class="actions">
         <div class="button" data-action="change" data-localization-page="main" data-localization-key="change"></div>
         <div class="button" data-action="share" data-localization-page="main" data-localization-key="share"></div>
+        <div class="button" data-action="background">FX</div>
     </div>
 
     <script>
