Funciones para ir a siguiente personaje y a anterior. Ademas generacion random de pj

--- a/index.html
+++ b/index.html
@@ -76,9 +76,11 @@
     </div>
 
     <div class="actions">
-        <div class="button" data-action="change" data-localization-page="main" data-localization-key="change"></div>
-        <div class="button" data-action="share" data-localization-page="main" data-localization-key="share"></div>
-        <div class="button" data-action="background">FX</div>
+        <div class="button" data-action="prev"></div>
+        <div class="button" data-action="next"></div>
+        <div class="button" data-action="random"></div>
+        <div class="button" data-action="share"></div>
+        <div class="button" data-action="background"></div>
     </div>
 
     <script>
