Efectos para botones

--- a/index.html
+++ b/index.html
@@ -68,19 +68,19 @@
                 </div>
             </div>
             <div class="footer">
-                <div class="ql-points" data-url="/assets/images/others/ql-support.png" data-lazy="true" data-lazy_type="background">5326</div>
-                <div class="ranking text" data-text="#595"></div>
+                <div class="ql-points" data-url="/assets/images/others/ql-support.png" data-lazy="true" data-lazy_type="background"></div>
+                <div class="ranking text" data-text="#"></div>
             </div>
             <div class="border"></div>
         </div>
     </div>
 
     <div class="actions">
-        <div class="button" data-action="prev"></div>
-        <div class="button" data-action="next"></div>
-        <div class="button" data-action="random"></div>
-        <div class="button" data-action="share"></div>
-        <div class="button" data-action="background"></div>
+        <div data-action="prev" data-url="/assets/images/others/arrow-prev.png" data-lazy="true" data-lazy_type="background"></div>
+        <div data-action="random"></div>
+        <div data-action="share"></div>
+        <div data-action="background"></div>
+        <div data-action="next" data-url="/assets/images/others/arrow-next.png" data-lazy="true" data-lazy_type="background"></div>
     </div>
 
     <script>
