Iconos para botones'

--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
 
     <div class="actions">
         <div data-action="prev" data-url="/assets/images/others/arrow-prev.png" data-lazy="true" data-lazy_type="background"></div>
-        <div data-action="random"></div>
-        <div data-action="share"></div>
-        <div data-action="background"></div>
         <div data-action="next" data-url="/assets/images/others/arrow-next.png" data-lazy="true" data-lazy_type="background"></div>
+        <div data-action="random" data-url="/assets/images/others/random.png" data-lazy="true" data-lazy_type="background"></div>
+        <div data-action="background" data-url="/assets/images/others/fx.png" data-lazy="true" data-lazy_type="background"></div>
+        <div data-action="share" data-url="/assets/images/others/share.png" data-lazy="true" data-lazy_type="background"></div></div>
     </div>
 
     <script>
