--- a/index.html
+++ b/index.html
@@ -74,13 +74,15 @@
             <div class="border"></div>
         </div>
     </div>
+    
+    <div class="title text" data-localization-page="main" data-localization-key="title" data-localization-attribute="data-text"></div>
 
     <div class="actions">
         <div data-action="prev" data-url="/assets/images/others/arrow-prev.png" data-lazy="true" data-lazy_type="background"></div>
         <div data-action="next" data-url="/assets/images/others/arrow-next.png" data-lazy="true" data-lazy_type="background"></div>
         <div data-action="random" data-url="/assets/images/others/random.png" data-lazy="true" data-lazy_type="background"></div>
         <div data-action="background" data-url="/assets/images/others/fx.png" data-lazy="true" data-lazy_type="background"></div>
-        <div data-action="share" data-url="/assets/images/others/share.png" data-lazy="true" data-lazy_type="background"></div></div>
+        <div data-action="share" data-url="/assets/images/others/share.png" data-lazy="true" data-lazy_type="background"></div>
     </div>
 
     <script>
@@ -97,6 +99,8 @@
     <script src="/assets/js/html2canvas.js"></script>
     <script src="/assets/js/three.min.js"></script>
     <script src="/assets/js/vanta.waves.min.js"></script>
+    <script src="/assets/js/popperjs_core.min.js"></script>
+    <script src="/assets/js/tippy.min.js"></script>
     <script src="/assets/js/main.js"></script>
 </body>
 </html>
