--- a/index.html
+++ b/index.html
@@ -5,7 +5,18 @@
 	<meta charset="utf-8">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
-    <meta name="theme-color" content="#3cb3bd"/>
+    <link rel="manifest" href="manifest.json" />
+    <!-- ios support -->
+    <link rel="apple-touch-icon" href="/assets/icons/icon-72x72.png" />
+    <link rel="apple-touch-icon" href="/assets/icons/icon-96x96.png" />
+    <link rel="apple-touch-icon" href="/assets/icons/icon-128x128.png" />
+    <link rel="apple-touch-icon" href="/assets/icons/icon-144x144.png" />
+    <link rel="apple-touch-icon" href="/assets/icons/icon-152x152.png" />
+    <link rel="apple-touch-icon" href="/assets/icons/icon-192x192.png" />
+    <link rel="apple-touch-icon" href="/assets/icons/icon-384x384.png" />
+    <link rel="apple-touch-icon" href="/assets/icons/icon-512x512.png" />
+    <meta name="apple-mobile-web-app-status-bar" content="#255e7d" />
+    <meta name="theme-color" content="#255e7d" />
     <meta name="description" data-localization-page="main" data-localization-key="pageDescription" data-localization-attribute="content"/>
 	<title data-localization-page="main" data-localization-key="pageTitle">JanKenUp! Card - Humita Games</title>
     <meta name="twitter:card" content="summary_large_image">
