--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link rel="icon" href="/assets/icons/favicon.ico">
     <link rel="icon" href="/assets/icons/favicon_16x16.png" sizes="16x16" type="image/png">
     <link rel="icon" href="/assets/icons/favicon_32x32.png" sizes="32x32" type="image/png">
-    <link href="/assets/css/main.css?a=2" type="text/css" rel="stylesheet">
+    <link href="/assets/css/main.css" type="text/css" rel="stylesheet">
 </head>
 <body class="fade-in">
     
